Drag and drop added

--- a/app.yaml
+++ b/app.yaml
@@ -9,9 +9,21 @@ handlers:
   static_files: favicon.ico
   upload: favicon\.ico
 
+- url: /css
+  static_dir: css
+  
+- url: /images
+  static_dir: images
+    
+- url: /javascript
+  static_dir: javascript
+
 - url: .*
   script: main.app
 
 libraries:
 - name: webapp2
   version: "2.5.2"
+
+- name: jinja2
+  version: latest
